# SimOhen2

./: CMakeLists.txt  Makefile  main.cpp
Class/: Simulacia.h  my_socket.cpp  my_socket.h
Server/: Server.c  Server.cpp
